components registerloan, login and more

--- a/.env.development
+++ b/.env.development
@@ -1,1 +1,4 @@
+VITE_API_URL_BOOK_SERVICE=http://localhost:8001/api
+VITE_API_URL_LOAN_SERVICE=http://localhost:8002/api
+VITE_API_URL_REQUEST_SERVICE=http://localhost:8003/api
 VITE_API_URL=http://localhost:8000/api
